# saiblo-docs

./: .gitignore  404.html  CNAME  index.html  mkdocs.yml  sitemap.xml  user.html
.github/workflows/: publish.yml
ai/: ai.html  cpp-env-clion.html  cpp-env-vscode.html
developer/: developer.html
docs/: index.md  user.md
docs/ai/: ai.md  cpp-env-clion.md  cpp-env-vscode.md
docs/developer/: developer.md
docs/developer/uno-ai/: .gitignore  CMakeLists.txt  README.md  test_ai
docs/developer/uno-ai/include/: Card.h  Datastream.h  Player.h
docs/developer/uno-ai/scripts/: remote_ai_client.py  remote_ai_client_uno.py  remote_ai_sdk.py
docs/developer/uno-ai/src/: Card.cpp  Datastream.cpp  Player.cpp  ai_client.h  main.cpp  wrong_ai_1.h
docs/developer/uno-logic/: CMakeLists.txt  Makefile  README.md  game  游戏逻辑和judger通信示例.md
docs/developer/uno-logic/include/: card.h  deck.h  game.h  player.h
docs/developer/uno-logic/src/: card.cpp  deck.cpp  game.cpp  main.cpp  player.cpp  uno_sdk.cpp
docs/games/: connect4.md  eggs.md  geek-rabbit.md  reversi.md  snake-go.md
docs/user/: ADK User Guide-Advanced.md  ADK User Guide-Lite.md  naive_user.md  user.md
games/: eggs.html  geek-rabbit.html  reversi.html
games/antwar/: replay-guide.html
games/aquawar/: aquawar.html  communication.html  rules.html  sdk.html
games/connect4/: connect4.html  local-guide.html  saiblo-guide.html  sdk.html  submission.html
games/lostspace/: communication.html  cpp-quick-start.html  cpp-sdk.html  lostspace.html  py-quick-start.html  py-sdk.html  replay.html  rules.html
games/mahjong/: mahjong.html  player.html  rules.html  sdk.html
games/miracle/: communicate.html  logic.html  miracle.html  sdk.html
search/: search_index.json
user/: user.html
(+46 files in other folders)
