CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(uno_game)
# ADD_COMPILE_OPTIONS(-fprofile-arcs)
# ADD_COMPILE_OPTIONS(-ftest-coverage)
#ADD_COMPILE_OPTIONS(-g --coverage)
# set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}  -fprofile-arcs -ftest-coverage")
# set(CMAKE_EXE_LINKER_FLAGS_DEBUG "${CMAKE_EXE_LINKER_FLAGS}  -fprofile-arcs -ftest-coverage")
set(CMAKE_CXX_STANDARD 11)
INCLUDE_DIRECTORIES(include)
AUX_SOURCE_DIRECTORY(src DIR_SRCS)
SET(UNO_GAME ${DIR_SRCS} src/main.cpp src/card.cpp include/card.h src/deck.cpp include/deck.h src/game.cpp include/game.h src/player.cpp include/player.h include/jsoncpp/jsoncpp.cpp include/jsoncpp/json/json.h include/jsoncpp/json/json-forwards.h src/uno_sdk.cpp )
SET(ORGANIZATION_NAME OneMorePigeon)
ADD_EXECUTABLE(game ${UNO_GAME})
